--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "com.example.rohansharma.timetable"
+        applicationId "com.fancy.packagename.rohansharma.timetable"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
     }
     buildTypes {
         release {
@@ -22,7 +22,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    //noinspection GradleDependency
     compile 'com.android.support:appcompat-v7:23.4.0'
 
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'cn.pedant.sweetalert:library:1.3'
 }
+
+apply plugin: 'com.google.gms.google-services'
