--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
 
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.google.android.gms:play-services-gcm:9.4.0'
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'com.github.halysongoncalves:pugnotification:1.8.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
