--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "24.0.1"
 
     defaultConfig {
         applicationId "com.fancy.packagename.rohansharma.timetable"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 7
-        versionName "v0.52-alpha"
+        targetSdkVersion 24
+        versionCode 8
+        versionName "v0.53-alpha"
     }
     buildTypes {
         release {
@@ -22,13 +22,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    //noinspection GradleDependency
-    compile 'com.android.support:appcompat-v7:23.4.0'
 
+    compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
     compile 'com.github.halysongoncalves:pugnotification:1.8.1'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.github.Kennyc1012:BottomSheet:2.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
