--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     compile 'com.github.halysongoncalves:pugnotification:1.8.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.github.Kennyc1012:BottomSheet:2.3.1'
+    compile 'com.android.support:support-v4:24.1.1'
 }
+
+
 
 apply plugin: 'com.google.gms.google-services'
