--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.fancy.packagename.rohansharma.timetable"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 8
-        versionName "v0.53-alpha"
+        versionCode 9
+        versionName "v0.54-alpha"
     }
     buildTypes {
         release {
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+//    testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.volley:volley:1.0.0'
@@ -32,7 +32,5 @@ dependencies {
     compile 'com.github.Kennyc1012:BottomSheet:2.3.1'
     compile 'com.android.support:support-v4:24.1.1'
 }
-
-
 
 apply plugin: 'com.google.gms.google-services'
