--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,18 @@ android {
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 9
-        versionName "v0.54-alpha"
+        versionName "0.54-alpha"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    aaptOptions {
+        cruncherEnabled = false
     }
 }
 
