--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.fancy.packagename.rohansharma.timetable">
 
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <permission
         android:name="com.fancy.packagename.rohansharma.timetable.permission.C2D_MESSAGE"
@@ -33,6 +36,7 @@
 
         <activity
             android:name=".activity.SettingsActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:parentActivityName=".activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
